updated AI adapters